added bittrex public api to server

--- a/package.json
+++ b/package.json
@@ -7,13 +7,15 @@
     "apeman-api-sign": "^2.1.4",
     "axios": "^0.17.1",
     "body-parser": "^1.18.2",
+    "cors": "^2.8.4",
     "express": "^4.16.2",
     "fs": "0.0.1-security",
     "jquery": "^3.2.1",
     "node-bittrex-api": "^0.8.1",
     "nodemon": "^1.14.7",
     "p5": "^0.5.16",
-    "pg": "^7.4.0"
+    "pg": "^7.4.0",
+    "superagent": "^3.8.2"
   },
   "devDependencies": {},
   "scripts": {
